--- a/src/App.css
+++ b/src/App.css
@@ -40,14 +40,17 @@ body {
 
 }
 
-
-
 .disable-select {
   user-select: none; /* supported by Chrome and Opera */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+.clickable {
+  cursor: pointer;
+  background-color: rgba(0, 0, 156, 0.5);
 }
 
 .glow-border {
@@ -62,7 +65,7 @@ body {
   }
   50%{
     box-shadow: 0px 0px 16px 0px rgba(50,50,255,1);
-    text-shadow: 0px 0px 16px rgba(200,200,255,1);
+    text-shadow: 0px 0px 16px rgb(0, 0, 151);
   }
   100%{
     box-shadow: 0px 0px 10px 0px rgba(50,50,255,1);
