--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,16 @@ body {
 
 }
 
+.dok-ondar {
+  background-image: url(./vehicle-images/dok-ondar.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
 .disable-select {
   user-select: none; /* supported by Chrome and Opera */
  -webkit-user-select: none; /* Safari */
