--- a/src/Components/Dock.css
+++ b/src/Components/Dock.css
@@ -61,6 +61,9 @@ input {
 .final-ship {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0px 15px;
+  margin: 15px 0px;
 }
 
 .final-ship > p {
@@ -70,6 +73,7 @@ input {
 .final-price {
   display: flex;
   justify-content: space-between;
+  padding: 0px 15px;
 }
 
 .checkout-symbol {
